# adam-atan2-pytorch

./: README.md  pyproject.toml  train_grokking.py
adam_atan2_pytorch/: __init__.py  adam_atan2.py  adam_atan2_clip_grok.py  adam_atan2_with_orthog_grad.py  adam_atan2_with_wasserstein_reg.py  adopt.py  adopt_atan2.py  foreach.py  muon_adam_atan2.py  polar_adam_atan2.py
tests/: test_optimizers.py
